FIX: mask에 visibility: hidden 추가하여 헤더 제외한 부분 클릭 안되는 문제 해결

--- a/src/scss/main.magic-leap.scss
+++ b/src/scss/main.magic-leap.scss
@@ -229,6 +229,7 @@ body {
     .mask {
         background-color: $mask-black;
         opacity: 0;
+        visibility: hidden;
         z-index: -2;
         position: fixed;
         top: 0;
